2008-10-31  Sebastien Pouliot  <sebastien@ximian.com>

	* gendarme-wizard.desktop: Moved into swf-wizard-runner directory
	* Makefile.am: Add gendarme.svg to pixmaps

2008-10-30  Sebastien Pouliot  <sebastien@ximian.com> 

	* AUTHORS: Add Jesse Jones to the list.

2008-10-30  Sebastien Pouliot  <sebastien@ximian.com>

	* self-test.ignore: Update to fix entry for ReturnNullRule versus
	ConsiderAddingInterfaceRule and add a new one for OptionSet suffix

2008-10-22  Sebastien Pouliot  <sebastien@ximian.com>

	* self-test.ignore: Update to add an entry about MethodSignatures
	readonly fields containing the '_' character (which is "by design" 
	since the signatures are for operator methods).

2008-10-22  Néstor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: This target is not longer needed because we generate the
	documentation in the same way than rules.

2008-10-20  Sebastien Pouliot  <sebastien@ximian.com>

	* gendarme-wizard.in: Support MONO_OPTIONS too (like gendarme does)

2008-10-12  Sebastien Pouliot  <sebastien@ximian.com>

	* self-test.ignore: Update (and add) some ignore entries.

2008-08-28  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Change self-test to report all defects (i.e. not
	to filter out any defect based on severity or confidence).

2008-07-14  Sebastien Pouliot  <sebastien@ximian.com>

	* NEWS: Update for the next release.
	* self-test.ignore: Update (and add) some ignore entries.

2008-06-15  Daniel Nauck  <dna@mono-project.de>

	* gendarme-wizard.desktop: add desktop file

2008-05-28  Sebastien Pouliot  <sebastien@ximian.com>

	* gendarme.in: Add $MONO_OPTIONS since this is more common than
	the $MONO_EXTRA_ARGS we have been using (and keeping for 
	compatibility)

2008-04-18  Sebastien Pouliot  <sebastien@ximian.com> 

	* README: Add (the periodic remainder ;-) that Makefiles are 
	*the* official build system used by Gendarme while others
	(MonoDevelop and VS.NET) are user-supported.