@@ -1,3 +1,9 @@
+2008-11-02  Jesse Jones  <jesjones@mindspring.com>
+
+	* Makefile.am: Added test1 and help targets. test1 builds just enough
+	to run a single rule test dll and runs a single text fixture in the dll
+	(using a TEST1 variable).
+
 2008-10-31  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* gendarme-wizard.desktop: Moved into swf-wizard-runner directory
